# crash-data-exploration

./: .gitignore  Makefile  README.md  answerslogic.md  create_notebook.py  implementation_plan.md  pyproject.toml  requirements.txt  run_analysis.py  traffic_crash_analysis.ipynb
config/: settings.py
docs/superpowers/plans/: 2026-03-30-as-of-date-hindcast.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Filters.tsx  ForecastChart.tsx  HotspotPanel.tsx  Map.tsx
frontend/src/types/: api.ts
output/: crash_heatmap.html  fatal_crashes_map.html
src/: features.py  h3_index.py  ingest.py  panel.py  pipeline.py
src/api/: app.py  deps.py  routes.py  schemas.py
src/crashscope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: evaluate.py  lgbm.py  naive.py
tests/: conftest.py  test_api.py  test_evaluate.py  test_features.py  test_h3_index.py  test_ingest.py  test_lgbm.py  test_naive.py  test_panel.py  test_schemas.py  test_settings.py
